<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.arun.calculator.MainActivity"
    android:weightSum="5"
    android:background="@drawable/my_button_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_weight="1"
        android:layout_margin="4dp"

        android:background="@drawable/my_button_bg"
        >

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewEnd"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_weight="1"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button7"
            android:layout_margin="2dp"
            android:background="@drawable/my_button_bg"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button8"
            android:layout_margin="2dp"
            android:background="@drawable/my_button_bg"
            />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button9"
            android:layout_margin="2dp"
            android:background="@drawable/my_button_bg"/>

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonMultiplication"
            android:layout_margin="2dp"
            android:background="@drawable/my_button_bg"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_weight="1"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button4"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button5"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button6"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDivision"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
        android:layout_weight="1"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button1"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button2"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button3"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonMinus"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout4"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="2dp"
        >

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button0"
            android:layout_weight="1"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"

            />

        <Button
            android:id="@+id/buttondot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttondot"
            android:layout_weight=".475"
            android:background="@drawable/my_button_bg"
           android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"

            />

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.475"
            android:text="@string/buttonClear"
            android:background="@drawable/my_button_bg"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonResult"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"


            />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonPlus"
            android:layout_weight="1"
            android:background="@drawable/my_button_bg"
            android:layout_margin="2dp"

            />

    </LinearLayout>

</LinearLayout>


